Filter Search has been Added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -55,7 +55,8 @@
 
                     <li class="sidebar">
                         <a routerLink="/assigned-leads">
-                            <i class="fas fa-phone-volume"></i>
+                            <i class="fas fa-exchange-alt"></i>
+                            <!-- <i class="fas fa-phone-volume"></i> -->
                             <span>Assigned Leads</span>
                         </a>
                     </li>
