--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -1,3 +1,9 @@
+/* input,
+input::-webkit-input-placeholder {
+    font-size: 20px;
+    line-height: 3;
+} */
+
 .btn3 {
     margin-left: 20px;
     border-radius: 20px;
@@ -291,7 +297,7 @@ textarea {
     /* margin: 10px; */
     /* padding: 12px; */
     border: none;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 textarea:focus,
