--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -33,10 +33,6 @@
                     <th scope="col">Land Area</th>
                     <th scope="col">Client Type</th>
                     <th scope="col">Demand</th>
-
-                    <th scope="col">Assigned History</th>
-                    <th scope="col">Assigned To</th>
-                    <!-- <th scope="col">Agent Assigned</th> -->
                     <th scope="col">Operations</th>
                 </thead>
 
@@ -92,19 +88,11 @@
                         <ng-template #elseBlockDemand>
                             <td>{{ user.demand_price }}</td>
                         </ng-template>
-
-                        <!-- <td>{{ user.beds_number }}</td> -->
-                        <td>{{ user.assigned_history}}</td>
-                        <td>{{ user.assigned_to}}</td>
+                        <!-- <td>{{ user.assigned_to}}</td> -->
                         <td>
-                            <i class="fa fa-edit icon"></i
-              ><a  role="button"></a>
+                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
 
-              <i
-                class="fa fa-trash icon" (click)="confirmID(user._id)" 
-                data-toggle="modal"
-                data-target="#exampleModal1"
-              ></i>
+                            <i class="fas fa-exchange-alt ml-2" (click)="setCurrentRow(user)" data-toggle="modal" data-target="#myModal"></i>
                         </td>
                         <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -134,6 +122,48 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal" id="myModal">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="text-center">Assigned Agents History</h4>
+                <button type="button" class="close" data-dismiss="modal">
+            &times;
+          </button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <table class="table table-hover">
+                    <thead>
+                        <th scope="col">ID</th>
+                        <th scope="col">Full Name</th>
+                        <th scope="col">Date</th>
+                    </thead>
+
+                    <tbody>
+                        <tr *ngFor="let history of row.assigned_history">
+                            <td>{{ history.userId }}</td>
+                            <td>{{ history.fullname }}</td>
+                            <td>{{history.date | date}}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">
+      Close
+    </button>
+            </div>
         </div>
     </div>
 </div>
